@@ -1,7 +1,8 @@
 2010-03-03  Glenn Randers-Pehrson  <gblennrp@simple.dallas.tx.us>
 
 	* coders/png.c: restored missing "US" in PNG_USER_CHUNK_CACHE_MAX
-        at line 102.
+        at line 102.  Added some (unsigned long) typecasts on print statements
+        to stifle warnings.
 
 2010-03-03  Bob Friesenhahn  <bfriesen@simple.dallas.tx.us>
 
